--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 
+
 <body>
   <div class="container">
-    <img src=".\images\image-qr-code.png" alt="">
+    <img src="image-qr-code.png" alt="">
     <h1>
       Improve your front-end skills by building projects
     </h1>
